aarlo/pyaarlo
0.7.1b6: Add new event handling
0.7.1b5: Don't rely on camera reporting back idle status
0.7.1b4: Smart user agents.
0.7.1b3: Fixed for 2021.3
0.7.1b1: Add media download.

0.7.0.18: Update user agent and request headers.
0.7.0.6: Stop battery drain on any battery based base station.
0.7.0.5: Fix CameraMJpeg issues.
0.7.0.4: Handle broken modes fetch.
0.7.0.3: Handle broken library fetch.
0.7.0.2: Made mode refresh optional.
0.7.0: Added PUSH support for authentication.
        Fixed missing stream state.
0.7.0.beta.7 Make platform startup async
        Fix mode change issue
0.7.0.beta.6 Fix mode update.
0.7.0.beta.5 Fix mode update.
        Fix possible log in issue.
0.7.0.beta.4 Support base reset
        Better snapshot handling.
0.7.0.beta.2 Handle no basestations.
        Print a traceback on background failure.
        Automatically write image updates to file.
        Fix arming retry.
0.7.0.beta.1 Make snapshot method configurable.
0.7.0.alpha.8 Support serial numbers as IDs
        Add switches to turn off doorbell chimes.
        Fix missing mode update.
        Fix camera on/off.
0.7.0.alpha.6: Fix spotlight merge issue.
        Fix arloq audio merge issue.
0.7.0.alpha.5: Added new image update events.
        Fixed backend not starting promptly.
0.7.0.alpha.4: Further State machine improvements.
        Speed up startup.
        Use new Home Assistant entitry names.
0.7.0.alpha.3: Further State machine improvements.
        Prefer streaming snapshot to idle snapshot.
        Fix Direct I/O message.
        Pyclewn linting.
0.7.0.alpha.2: State machine improvements.
        Services.yaml now has all parameters
        Allow recording longer than 30 seconds.
0.7.0.alpha.1: First 0.7 test build
0.6.89: Beta 2FA support
0.6.17: Add request_snapshot webservice
0.6.16: Fix last_image so lovelace card works
        Arlo Baby: fix effect switching
0.6.15: Copied services into aarlo domain
0.6.14: Added unique keys
        Fixed cry detection