@@ -1,5 +1,6 @@
 aarlo/pyaarlo
 0.7.1b6: Add new event handling
+        Allow custimisable disarmed mode
 0.7.1b5: Don't rely on camera reporting back idle status
 0.7.1b4: Smart user agents.
 0.7.1b3: Fixed for 2021.3
